[gd_scene load_steps=8 format=3 uid="uid://ck6xlr4y2g0wi"]

[ext_resource type="Script" uid="uid://bg372p21aiy0w" path="res://scripts/platform.gd" id="1_llfi5"]
[ext_resource type="Texture2D" uid="uid://bbh6qnjd6k4se" path="res://tileset/platform.png" id="3_23vn7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b6fom"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_t2ymj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_lj0k4"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -12), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bqj0u"]
resource_name = "jump_low"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -6), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0c8jh"]
_data = {
&"RESET": SubResource("Animation_t2ymj"),
&"jump": SubResource("Animation_lj0k4"),
&"jump_low": SubResource("Animation_bqj0u")
}

[node name="Platform" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_llfi5")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0.647059, 0.168627, 1)
texture_filter = 1
texture = ExtResource("3_23vn7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_b6fom")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Marker2D"]
remote_path = NodePath("../../Sprite2D")

[node name="RemoteTransform2D2" type="RemoteTransform2D" parent="Marker2D"]
remote_path = NodePath("../../CollisionShape2D")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0c8jh")
}

[node name="LeftPlatform" type="RayCast2D" parent="."]
rotation = 1.5708
target_position = Vector2(0, 32)
collision_mask = 8

[node name="RightPlatform" type="RayCast2D" parent="."]
rotation = 1.5708
target_position = Vector2(-1.39876e-06, -32)
collision_mask = 8

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
